--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main id="main">
     <section id="main-content" class="grid">
       <div class="content-wrap">
-        <h2 id="content-tag">Our Mission</h2>
+        <h2 id="content-tag">“Though she be but little, she is fierce”</br>(5/13/1998 – 9/29/2017)</h2>
       </div>
     </section>
 
@@ -41,24 +41,40 @@
           <div class="card">
             <div class="card-content">
               <div class="service-info">
+                <div class="card-image">
+                  <img src="images/stock-support.jpg" alt="" />
+                </div>
                 <h3 class="card-title">Support</h3>
-                Always optimized for mobile first.
+                <p>The Ashanti Foundation looks to provide support and information to the
+                  families of missing persons as well as support for those that are
+                  victims of violent crimes as a result.</p>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-content">
               <div class="service-info">
+                <div class="card-image">
+                  <img src="images/stock-prevention.jpg" alt="" />
+                </div>
                 <h3 class="card-title">Prevention</h3>
-                Utilize Media queries so websites look great on any browser.
+                <p>The Ashanti Foundation's preventive services will include fingerprinting and information kits
+                  for both kids and parents, self-defense classes, and self-esteem,
+                  depression, sexual-harassment and bullying awareness seminars.</p>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-content">
               <div class="service-info">
+                <div class="card-image">
+                  <img src="images/stock-scholarship.jpg" alt="" />
+                </div>
                 <h3 class="card-title">Scholarships</h3>
-                Using the latest frameworks like Angular and React.
+                <p>The Ashanti Foundation offers two partial scholarships
+                  avaliable for two deserving students to attend a school
+                  to study culinary arts. For more information, visit our
+                  <a href="scholarships.html">scholarships</a> page. </p>
               </div>
             </div>
           </div>
@@ -82,21 +98,22 @@
     </section>
     <section id="about-sec" class="grid">
       <h2 class="section-header">Ashanti Alert Act</h2>
+      <iframe src="https://www.youtube.com/embed/TqPDJapF9I0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p>The Ashanti Alert Act of 2018 was passed into law on 12/31/2018. This act, named after Ashanti, is a national communication network alert system used
       to provide support for missing adults between the ages 18-64, ages which were not covered under the Amber Alert or the Silver Alert.</p>
     </section>
 
     <!--Contact Content-->
     <a id="contact"></a>
-    <section id="contact-main" class="grid">
+    <div class="contact-wrapper">
+      <section id="contact-main" class="grid">
       <h2 class="section-header">Contact</h2>
       <p>The Ashanti Foundation</br>
-      145 Fleet Street Unit #323</br>
-      National Harbor, MD 20745</br>
-      (301)-201-1816</p>
-    </br/>
-    </br/>
-    </section>
+        145 Fleet Street Unit #323</br>
+        National Harbor, MD 20745</br>
+        (301)-201-1816</p>
+      </section>
+    </div>
 
   </main>
 
