--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css"
+  <link rel="stylesheet" href="css/style.css" />
   <title>Document</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
   <main id="main">
     <section id="main-content" class="grid">
       <div class="content-wrap">
-        <h2 id="content-tag">“Though she be but little, she is fierce”</br>(5/13/1998 – 9/29/2017)</h2>
+        <h2 id="content-tag">“Though she be but little, she is fierce”<br>(5/13/1998 – 9/29/2017)</h2>
       </div>
     </section>
 
@@ -86,19 +86,18 @@
     <section id="about-main" class="grid">
       <h2 class="section-header">About Ashanti</h2>
       <div class="about-image"></div>
-      </div>
-      <p>On September 18, 2017, Ashanti Markaila Billie became an innocent victim of a violent crime in Norfolk, Virginia.</br></br>
+      <p>On September 18, 2017, Ashanti Markaila Billie became an innocent victim of a violent crime in Norfolk, Virginia.<br><br>
       She was a 19 year old college student attending The Art Institute of Virginia Beach and was studying culinary arts with the dream of opening her own bakery.
       Additionally, she was the assistant store manager at a Blimpies Sandwich Shop on the Naval Joint Expeditionary Base-Little Creek in Norfolk, Virginia.
       After entering onto the military naval base on the morning of Monday, September 18, 2017, she was assaulted and kidnapped by a retired naval petty officer,
       Eric Brian Brown. Her car was then stolen and her phone was dropped in a dumpster in a residential area. The car was located in the Ocean View neighborhood
       in Norfolk, Virginia on September 23, 2017 and her body was located in Charlotte, North Carolina on September 29, 2017 on the church grounds that Brown
-      attended as a child which was located yards from his childhood home.</br></br>
+      attended as a child which was located yards from his childhood home.<br><br>
       Friends, family, loved ones, customers and coworkers that knew Ashanti as well as total strangers across the country were devastated and jumped into action to assist in any way possible. The anger and hurt at this cowardly act of violence towards Ashanti were in turn directed towards the building of The Ashanti Foundation and ensuring that her legacy lives on through continued support to others in need. Her parents Meltony and Brandy Billie have made it their mission to ensure that The Ashanti Foundation will be a legacy to their daughter and all the light and love that she projected to all that came into contact with her.</p>
     </section>
     <section id="about-sec" class="grid">
       <h2 class="section-header">Ashanti Alert Act</h2>
-      <iframe src="https://www.youtube.com/embed/TqPDJapF9I0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/TqPDJapF9I0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p>The Ashanti Alert Act of 2018 was passed into law on 12/31/2018. This act, named after Ashanti, is a national communication network alert system used
       to provide support for missing adults between the ages 18-64, ages which were not covered under the Amber Alert or the Silver Alert.</p>
     </section>
@@ -108,9 +107,9 @@
     <div class="contact-wrapper">
       <section id="contact-main" class="grid">
       <h2 class="section-header">Contact</h2>
-      <p>The Ashanti Foundation</br>
-        145 Fleet Street Unit #323</br>
-        National Harbor, MD 20745</br>
+      <p>The Ashanti Foundation<br>
+        145 Fleet Street Unit #323<br>
+        National Harbor, MD 20745<br>
         (301)-201-1816</p>
       </section>
     </div>
@@ -120,7 +119,7 @@
   <!--Footer Content-->
   <footer id="footer" class="grid">
     <div>&copy; Christopher Blackmon, 2018</div>
-    <div>For project inquries email <a href="mailto:dr3amvillain@gmail.com?subject=feedback">dr3amvillain@gmail.com</a>
+    <div>For project inquries email <a href="mailto:dr3amvillain@gmail.com?subject=feedback">dr3amvillain@gmail.com</a></div>
   </footer>
 </body>
 </html>
