--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
   </header>
 
   <!--Nav Content-->
-  <nav id="main-nav">
-    <ul>
-      <li><a href="#top">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#portfolio">Donate</a></li>
-      <li><a href="">Scholarships</a></li>
-    </ul>
-  </nav>
+  <div class="main-nav">
+    <label for="toggle">&#9776;</label>
+    <input type="checkbox" id="toggle" />
+    <div class="menu">
+      <a href="#top">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <a href="#portfolio">Donate</a>
+      <a href="">Scholarships</a>
+    </div>
+  </div>
 
   <!--Main Content-->
   <main id="main">
