--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
   <!--Header Content-->
   <header id="header" class="grid">
-    <div class="banner-image"></div>
+    <div class="banner-image">
     <div class="content-wrap">
+      <h1>Something</h1>
+    </div>
     </div>
   </header>
 
