--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header id="header" class="grid">
     <div class="banner-image">
     <div class="content-wrap">
-      <h1>Something</h1>
+      <img src="images/logov4.png" alt="">
     </div>
     </div>
   </header>
