--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <!--Nav Content-->
   <div class="main-nav">
+    <img src="images/logov4.png" alt="">
     <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle" />
     <div class="menu">
@@ -126,5 +127,6 @@
     <div>&copy; Christopher Blackmon, 2018</div>
     <div>For project inquries email <a href="mailto:dr3amvillain@gmail.com?subject=feedback">dr3amvillain@gmail.com</a></div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
