Fixed Menu Implementation
Correct JS to properly close the menu when a link is clicked

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <!--Nav Content-->
-  <div class="main-nav">
+  <div class="main-nav" id="nav">
     <img src="images/logov4.png" alt="">
     <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle" />
@@ -127,6 +127,6 @@
     <div>&copy; Christopher Blackmon, 2018</div>
     <div>For project inquries email <a href="mailto:dr3amvillain@gmail.com?subject=feedback">dr3amvillain@gmail.com</a></div>
   </footer>
-  <script src="js/script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
