About Section Styling

--- a/index.html
+++ b/index.html
@@ -91,27 +91,29 @@
 
     <!--About Ashanti Alert Content-->
     <a id="about"></a>
-    <section id="about-main" class="grid">
+    <section id="about" class="grid">
       <div class="about-wrapper">
-        <h2 class="section-header">About Ashanti</h2>
-        <div class="about-image"></div>
-        <p>On September 18, 2017, Ashanti Markaila Billie became an innocent victim of a violent crime in Norfolk, Virginia.<br><br>
-        She was a 19 year old college student attending The Art Institute of Virginia Beach and was studying culinary arts with the dream of opening her own bakery.
-        Additionally, she was the assistant store manager at a Blimpies Sandwich Shop on the Naval Joint Expeditionary Base-Little Creek in Norfolk, Virginia.
-        After entering onto the military naval base on the morning of Monday, September 18, 2017, she was assaulted and kidnapped by a retired naval petty officer,
-        Eric Brian Brown. Her car was then stolen and her phone was dropped in a dumpster in a residential area. The car was located in the Ocean View neighborhood
-        in Norfolk, Virginia on September 23, 2017 and her body was located in Charlotte, North Carolina on September 29, 2017 on the church grounds that Brown
-        attended as a child which was located yards from his childhood home.<br><br>
-        Friends, family, loved ones, customers and coworkers that knew Ashanti as well as total strangers across the country were devastated and jumped into action to assist in any way possible. The anger and hurt at this cowardly act of violence towards Ashanti were in turn directed towards the building of The Ashanti Foundation and ensuring that her legacy lives on through continued support to others in need. Her parents Meltony and Brandy Billie have made it their mission to ensure that The     Ashanti Foundation will be a legacy to their daughter and all the light and love that she projected to all that came into contact with her.</p>
-      </div>
-      </section>
+        <div class="about-content">
+          <h2 class="section-header">About Ashanti</h2>
+          <div class="about-image"></div>
+          <p>On September 18, 2017, Ashanti Markaila Billie became an innocent victim of a violent crime in Norfolk, Virginia.<br><br>
+          She was a 19 year old college student attending The Art Institute of Virginia Beach and was studying culinary arts with the dream of opening her own bakery.
+          Additionally, she was the assistant store manager at a Blimpies Sandwich Shop on the Naval Joint Expeditionary Base-Little Creek in Norfolk, Virginia.
+          After entering onto the military naval base on the morning of Monday, September 18, 2017, she was assaulted and kidnapped by a retired naval petty officer,
+          Eric Brian Brown. Her car was then stolen and her phone was dropped in a dumpster in a residential area. The car was located in the Ocean View neighborhood
+          in Norfolk, Virginia on September 23, 2017 and her body was located in Charlotte, North Carolina on September 29, 2017 on the church grounds that Brown
+          attended as a child which was located yards from his childhood home.<br><br>
+          Friends, family, loved ones, customers and coworkers that knew Ashanti as well as total strangers across the country were devastated and jumped into action to assist in any way possible. The anger and hurt at this cowardly act of violence towards Ashanti were in turn directed towards the building of The Ashanti Foundation and ensuring that her legacy lives on through continued support to others in need. Her parents Meltony and Brandy Billie have made it their mission to ensure that The     Ashanti Foundation will be a legacy to their daughter and all the light and love that she projected to all that came into contact with her.</p>
+        </div>
 
-      <section id="about-sec" class="grid">
-        <h2 class="section-header">Ashanti Alert Act</h2>
-        <iframe src="https://www.youtube.com/embed/TqPDJapF9I0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>The Ashanti Alert Act of 2018 was passed into law on 12/31/2018. This act, named after Ashanti, is a national communication network alert system used
-        to provide support for missing adults between the ages 18-64, ages which were not covered under the Amber Alert or the Silver Alert.</p>
-      </section>
+        <div class="about-content">
+          <h2 class="section-header">Ashanti Alert Act</h2>
+          <iframe src="https://www.youtube.com/embed/TqPDJapF9I0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>The Ashanti Alert Act of 2018 was passed into law on 12/31/2018. This act, named after Ashanti, is a national communication network alert system used
+          to provide support for missing adults between the ages 18-64, ages which were not covered under the Amber Alert or the Silver Alert.</p>
+        </div>
+      </div>
+    </section>
 
     <!--Contact Content-->
     <a id="contact"></a>
