--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <title>The Ashanti Foundation - Contact</title>
+  <title>The Ashanti Foundation - Services</title>
 </head>
 <body>
 
@@ -48,6 +48,15 @@
     <!--Content-->
     <section id="content" class="grid">
       <div class="content-wrapper">
+        <h2 class="content-header">Services</h2>
+        <span>image</span>
+        <p class="content-para">
+          The Ashanti Foundation believes in having core pillars that we base our Foundation
+          around. The Ashanti Foundation wishes to provide the community with what we call
+          "The Three S's": Scholarships, Seminars and Service Kits. More information about
+          each service can be found by following the links below.
+        </p>
+        <h2 class="content-header"><a href="scholarships.html">Scholarships</a></h2>
         <p class="content-para">
           Id export nostrud exercitation ad do labore doctrina, o non noster quibusdam do
           qui esse qui enim ab do export quem quo incididunt quo a est noster incididunt,
@@ -62,6 +71,7 @@
           proident. Fore consequat ea export quis ab cupidatat non vidisse o veniam et
           possumus, aut et esse nisi eram.
         </p>
+        <h2 class="content-header"><a href="seminars.html">Seminars</a></h2>
         <p class="content-para">
           Id consequat do eiusmod. Ea cillum quem se possumus iis ubi magna praetermissum,
           ut culpa quem nisi fabulas, commodo labore tamen incurreret duis. Sunt admodum
@@ -71,6 +81,7 @@
           te o eram vidisse quo te malis anim iis doctrina, enim singulis aut singulis e
           ut eram imitarentur an irure ab appellat a quem, ex iis noster nulla minim.
         </p>
+        <h2 class="content-header"><a href="kits.html">Service Kits</a></h2>
         <p class="content-para">
           Mandaremus legam irure non sint, de se sempiternum nam admodum an mandaremus si
           ullamco legam consequat et quo velit laboris pariatur, hic ea praesentibus, non
