--- a/seminars.html
+++ b/seminars.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <title>The Ashanti Foundation - Contact</title>
+  <title>The Ashanti Foundation - Seminars</title>
 </head>
 <body>
 
