--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <p>The Ashanti Foundation offers two partial scholarships
                   avaliable for two deserving students to attend a school
                   to study culinary arts. For more information, visit our
-                  <a href="scholarships.html">scholarships</a> page. </p>
+                  <a href="scholarships.html"><strong>scholarships</strong></a> page. </p>
               </div>
             </div>
           </div>
@@ -114,6 +114,7 @@
           <iframe src="https://www.youtube.com/embed/TqPDJapF9I0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <p>The Ashanti Alert Act of 2018 was passed into law on 12/31/2018. This act, named after Ashanti, is a national communication network alert system used
           to provide support for missing adults between the ages 18-64, ages which were not covered under the Amber Alert or the Silver Alert.</p>
+
           <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/breaking?src=hash&amp;ref_src=twsrc%5Etfw">#breaking</a> Had an emotional conversation w/Brandi Billie, mother of Ashanti &amp; spoke w/her father Meltony. Thank you <a href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">@realDonaldTrump</a> for signing <a href="https://twitter.com/hashtag/ashantialert?src=hash&amp;ref_src=twsrc%5Etfw">#ashantialert</a> into law on this NYE. Out of this dark tragedy, light &amp; hope will come for families across country in 2019. <a href="https://twitter.com/MarkWarner?ref_src=twsrc%5Etfw">@MarkWarner</a> <a href="https://t.co/URsxPX49Eb">pic.twitter.com/URsxPX49Eb</a></p>&mdash; Scott Taylor (@Scotttaylorva) <a href="https://twitter.com/Scotttaylorva/status/1079889794115821569?ref_src=twsrc%5Etfw">December 31, 2018</a></blockquote>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
