Update to current version

--- a/donate.html
+++ b/donate.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>The Ashanti Foundation - Donate</title>
 </head>
 <body>
@@ -49,7 +50,7 @@
     <section id="content" class="grid">
       <div class="content-wrapper">
         <h2 class="content-header">Thank you for considering donating to the Ashanti Foundation!</h2>
-        <a href="https://paypal.com"><img src="images/paypal-donate.png" class="dono-image"/></a>
+        <a href="https://paypal.com"><img src="images/paypal-donate.png" alt="paypal logo" class="dono-image"/></a>
         <p class="content-para">
           Donations have a tremendous impact on The Ashanti Foundation's ability to provide services,
           seminars and scholarships. Money recieved from supporters allow us to grow our ability to
@@ -57,6 +58,7 @@
           apperciation to our gracious donors, we have provided a list of names that have donated their
           hard earned money to our cause.
         </p>
+        <span><small>*Note: This is fake generated data generated at <a href="https://next.json-generator.com/">JSON Generator</a></small></span>
         <p id="donors">
           <!--JSON Data-->
         </p>
@@ -66,12 +68,21 @@
 
   <!--Footer Content-->
   <footer id="footer" class="grid">
+    <div id="social-foot">
+      <span>Follow Us on Social Media!</span><br />
+      <a href="https://facebook.com" class="fa fa-facebook"></a>
+      <a href="https://twitter.com" class="fa fa-twitter"></a>
+      <a href="https://instagram.com" class="fa fa-instagram"></a>
+      <a href="https://linkedin.com" class="fa fa-linkedin"></a>
+      <a href="https://youtube.com" class="fa fa-youtube"></a>
+    </div>
     <div>&copy; Christopher Blackmon, 2018</div>
     <div>For project inquries email <a href="mailto:dr3amvillain@gmail.com?subject=feedback">dr3amvillain@gmail.com</a></div>
+    <div><a href="references.html">Image References (Raw HTML)</a></div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
-  <script type="text/javascript" src="js/donor.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/donor.js"></script>
 </body>
 </html>
