--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card-content">
               <div class="service-info">
                 <div class="card-image">
-                  <a href="kits.html"><img src="images/stock-support.jpg" alt="" /></a>
+                  <a href="kits.html"><img src="images/support.jpg" alt="" /></a>
                 </div>
                 <h3 class="card-title">Support</h3>
                 <p>The Ashanti Foundation looks to provide support and information to the
@@ -66,7 +66,7 @@
             <div class="card-content">
               <div class="service-info">
                 <div class="card-image">
-                  <a href="seminars.html"><img src="images/stock-prevention.jpg" alt="" /></a>
+                  <a href="seminars.html"><img src="images/prevention.jpg" alt="" /></a>
                 </div>
                 <h3 class="card-title">Prevention & Seminars</h3>
                 <p>The Ashanti Foundation's preventive services will include fingerprinting and information kits
@@ -79,7 +79,7 @@
             <div class="card-content">
               <div class="service-info">
                 <div class="card-image">
-                  <a href="scholarships.html"><img src="images/stock-scholarship.jpg" alt="" /></a>
+                  <a href="scholarships.html"><img src="images/scholarship.jpg" alt="" /></a>
                 </div>
                 <h3 class="card-title">Scholarships</h3>
                 <p>The Ashanti Foundation offers two partial scholarships
@@ -93,7 +93,7 @@
     </section>
 
     <!--About Ashanti Alert Content-->
-    <div id="about-mark"></a>
+    <div id="about-mark"></div>
     <section id="about" class="grid">
       <div class="about-wrapper">
         <div class="about-content">
@@ -116,7 +116,7 @@
           to provide support for missing adults between the ages 18-64, ages which were not covered under the Amber Alert or the Silver Alert.</p>
 
           <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/breaking?src=hash&amp;ref_src=twsrc%5Etfw">#breaking</a> Had an emotional conversation w/Brandi Billie, mother of Ashanti &amp; spoke w/her father Meltony. Thank you <a href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">@realDonaldTrump</a> for signing <a href="https://twitter.com/hashtag/ashantialert?src=hash&amp;ref_src=twsrc%5Etfw">#ashantialert</a> into law on this NYE. Out of this dark tragedy, light &amp; hope will come for families across country in 2019. <a href="https://twitter.com/MarkWarner?ref_src=twsrc%5Etfw">@MarkWarner</a> <a href="https://t.co/URsxPX49Eb">pic.twitter.com/URsxPX49Eb</a></p>&mdash; Scott Taylor (@Scotttaylorva) <a href="https://twitter.com/Scotttaylorva/status/1079889794115821569?ref_src=twsrc%5Etfw">December 31, 2018</a></blockquote>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <script async src="https://platform.twitter.com/widgets.js"></script>
 
         </div>
       </div>
@@ -151,8 +151,10 @@
     </div>
     <div>&copy; Christopher Blackmon, 2018</div>
     <div>For project inquries email <a href="mailto:dr3amvillain@gmail.com?subject=feedback">dr3amvillain@gmail.com</a></div>
+    <div><a href="references.html">Image References (Raw HTML)</a></div>
   </footer>
-  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
