--- a/services.html
+++ b/services.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>The Ashanti Foundation - Services</title>
 </head>
 <body>
@@ -49,50 +50,24 @@
     <section id="content" class="grid">
       <div class="content-wrapper">
         <h2 class="content-header">Services</h2>
-        <span>image</span>
+        <img class="image-header" src="images/services.jpg" alt="" />
         <p class="content-para">
           The Ashanti Foundation believes in having core pillars that we base our Foundation
           around. The Ashanti Foundation wishes to provide the community with what we call
           "The Three S's": Scholarships, Seminars and Service Kits. More information about
           each service can be found by following the links below.
         </p>
-        <h2 class="content-header"><a href="scholarships.html">Scholarships</a></h2>
+        <h2 class="sub-header"><a href="scholarships.html">Scholarships</a></h2>
         <p class="content-para">
-          Id export nostrud exercitation ad do labore doctrina, o non noster quibusdam do
-          qui esse qui enim ab do export quem quo incididunt quo a est noster incididunt,
-          te eu nisi duis tamen, quorum arbitror coniunctione. Do fugiat incurreret
-          praesentibus non aliqua an offendit, mandaremus esse tamen consequat nulla do
-          vidisse ut sunt ad tempor a singulis ad laborum culpa ex cupidatat adipisicing,
-          quorum relinqueret vidisse culpa senserit, o nisi eu quae. Ipsum appellat
-          transferrem. Excepteur ubi ipsum deserunt, noster laborum an distinguantur quo
-          iudicem fidelissimae a doctrina, fugiat a expetendis de probant cillum consequat
-          a labore efflorescere probant export commodo, quem officia de sempiternum aut in
-          o quorum vidisse.Do do exercitation, duis te ad aute fabulas. Eram laboris
-          proident. Fore consequat ea export quis ab cupidatat non vidisse o veniam et
-          possumus, aut et esse nisi eram.
+          Find more information about the scholarship services we offer and how to apply to one of our scholarships.
         </p>
-        <h2 class="content-header"><a href="seminars.html">Seminars</a></h2>
+        <h2 class="sub-header"><a href="seminars.html">Seminars</a></h2>
         <p class="content-para">
-          Id consequat do eiusmod. Ea cillum quem se possumus iis ubi magna praetermissum,
-          ut culpa quem nisi fabulas, commodo labore tamen incurreret duis. Sunt admodum
-          cupidatat. Ad et exercitation.Proident irure culpa e enim, iis proident de
-          incurreret, quae praetermissum probant sunt senserit qui sed legam o legam. Hic
-          fore arbitrantur. Probant magna proident ea sunt cernantur praesentibus, aliqua
-          te o eram vidisse quo te malis anim iis doctrina, enim singulis aut singulis e
-          ut eram imitarentur an irure ab appellat a quem, ex iis noster nulla minim.
+          Find more information about the what seminar we are holding next, the content of the seminars and the locations we use.
         </p>
-        <h2 class="content-header"><a href="kits.html">Service Kits</a></h2>
+        <h2 class="sub-header"><a href="kits.html">Service Kits</a></h2>
         <p class="content-para">
-          Mandaremus legam irure non sint, de se sempiternum nam admodum an mandaremus si
-          ullamco legam consequat et quo velit laboris pariatur, hic ea praesentibus, non
-          anim commodo despicationes ita o dolore incurreret imitarentur. Ita irure duis
-          quorum incurreret. Sint fabulas qui exercitation an illum fidelissimae
-          incurreret esse pariatur, hic quis domesticarum, appellat in tamen, fore
-          mentitum expetendis, se velit mentitum se summis proident ubi comprehenderit de
-          singulis illum anim ut anim. Quo nulla quibusdam eu aut quae mentitum
-          voluptate.Excepteur quorum summis deserunt magna, do tempor comprehenderit ut
-          summis senserit est voluptate, ipsum quibusdam aliquip. Ubi sunt consequat
-          cupidatat. Est qui exquisitaque. Dolore a senserit, aut ne minim aliquip.
+          Find more information about the service kits we offer.
         </p>
       </div>
     </section>
@@ -100,10 +75,20 @@
 
   <!--Footer Content-->
   <footer id="footer" class="grid">
+    <div id="social-foot">
+      <span>Follow Us on Social Media!</span><br />
+      <a href="https://facebook.com" class="fa fa-facebook"></a>
+      <a href="https://twitter.com" class="fa fa-twitter"></a>
+      <a href="https://instagram.com" class="fa fa-instagram"></a>
+      <a href="https://linkedin.com" class="fa fa-linkedin"></a>
+      <a href="https://youtube.com" class="fa fa-youtube"></a>
+    </div>
     <div>&copy; Christopher Blackmon, 2018</div>
     <div>For project inquries email <a href="mailto:dr3amvillain@gmail.com?subject=feedback">dr3amvillain@gmail.com</a></div>
+    <div><a href="references.html">Image References (Raw HTML)</a></div>
   </footer>
-  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
